# tap-stackexchange

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tap-stackexchange.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yaml  constraints.txt  test.yml
tap_stackexchange/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  conftest.py  test_backoff.py  test_core.py
