[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.4",
  "hatchling==1.27",
]

[project]
name = "tap-stackexchange"
description = "Singer tap for StackExchange, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "meltano",
  "singer-io",
  "StackExchange",
]
license = "Apache-2.0"
authors = [ { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" } ]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "pyrate-limiter==3.*; python_version<'4'",
  "requests-cache==1.*; python_version<'4'",
  "singer-sdk==0.47.*",
]

urls.Documentation = "https://github.com/MeltanoLabs/tap-stackexchange/blob/main/README.md"
urls.Homepage = "https://github.com/MeltanoLabs/tap-stackexchange"
urls.Repository = "https://github.com/MeltanoLabs/tap-stackexchange"
scripts.tap-stackexchange = "tap_stackexchange.tap:TapStackExchange.cli"

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "typing" },
]
test = [
  "pytest-github-actions-annotate-failures>=0.3",
  "pytest-httpserver>=1.0.8,<2; python_version<'4'",
  "singer-sdk[testing]>=0.23",
]
typing = [
  "mypy>=1.11.1",
  "types-requests",
]

[tool.hatch.version]
fallback-version = "0.0.0"
source = "vcs"

[tool.ruff]
line-length = 88
lint.select = [
  "ALL",
]

lint.flake8-annotations.allow-star-arg-any = true
lint.isort.known-first-party = [
  "tap_stackexchange",
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.mypy]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
