[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.28",
]

[project]
name = "tap-stackexchange"
description = "Singer tap for StackExchange, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "meltano",
  "singer-io",
  "StackExchange",
]
license = "Apache-2.0"
authors = [ { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "pyrate-limiter==3.*; python_version<'4'",
  "requests-cache==1.*; python_version<'4'",
  "singer-sdk==0.53.*",
  "typing-extensions>=4.15; python_full_version<'3.12'",
]

urls.Documentation = "https://github.com/MeltanoLabs/tap-stackexchange/blob/main/README.md"
urls.Homepage = "https://github.com/MeltanoLabs/tap-stackexchange"
urls.Repository = "https://github.com/MeltanoLabs/tap-stackexchange"
scripts.tap-stackexchange = "tap_stackexchange.tap:TapStackExchange.cli"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "pytest>=9",
  "pytest-github-actions-annotate-failures>=0.3",
  "pytest-httpserver>=1.0.8; python_version<'4'",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1.18",
  "ty>=0.0.1a29",
  "types-requests>=2.32.4",
]

[tool.hatch.version]
fallback-version = "0.0.0"
source = "vcs"

[tool.uv]
required-version = ">=0.9"

[tool.ruff]
line-length = 88
lint.select = [
  "ALL",
]

lint.flake8-annotations.allow-star-arg-any = true
lint.isort.known-first-party = [
  "tap_stackexchange",
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.tox]
minversion = "4.22"
requires = [
  "tox>=4.22",
  "tox-uv",
]
envlist = [
  "typing",
  "py310",
  "py311",
  "py312",
  "py313",
  "py314",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [
  "GITHUB_*",
  "TAP_STACKEXCHANGE_*",
]
set_env = { "PYO3_USE_ABI3_FORWARD_COMPATIBILITY" = "1" }
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.typing]
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", "--strict", { replace = "posargs", default = [ "tap_stackexchange", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_stackexchange", "tests" ], extend = true } ],
]

[tool.mypy]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
